correctly rewrapped a tag, change font size of entry

--- a/styles/category.css
+++ b/styles/category.css
@@ -53,7 +53,7 @@ a:hover {
 }
 
 .main_body_content .news_title{
-  font-size: 1.6em;
+  font-size: 1.3em;
 }
 
 @media (min-width: 576px) {
